feat(Cargo.toml): add arrow dependency with ffi feature for enhanced functionality chore(Cargo.toml): update geoarrow dependency to use latest git version for latest features and fixes refactor(download.rs): replace RecordBatchReader with Table for improved data handling and conversion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ keywords = ["naturalearthdata", "geospatial", "data", "gdal", "geoarrow"]
 categories = ["science", "science::geo"]
 
 [dependencies]
+arrow = { version = "53", features = ["ffi"] }
 gdal = "0.17.0"
-geoarrow = { version = "0.3.0", features = ["gdal"] }
+# geoarrow = { version = "0.3.0", features = ["gdal"] }
+geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", features = [
+  "gdal",
+] }
