build(Cargo.toml): pin geoarrow dependency to a specific commit
Pinning the geoarrow dependency to a specific commit ensures stability and reproducibility by preventing unexpected changes from upstream. This change locks the version to commit `e12a4982a56f6a875536a7a22f645977877bc7a6`, providing a consistent development and build environment.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ categories = ["science", "science::geo"]
 arrow = { version = "53", features = ["ffi"] }
 gdal = "0.17.0"
 # geoarrow = { version = "0.3.0", features = ["gdal"] }
-geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", features = [
+geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "e12a4982a56f6a875536a7a22f645977877bc7a6", features = [
   "gdal",
 ] }
