--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ keywords = ["naturalearthdata", "geospatial", "data", "gdal", "geoarrow"]
 categories = ["science", "science::geo"]
 
 [dependencies]
-arrow = { version = "53", features = ["ffi"] }
 gdal = "0.17.0"
 # geoarrow = { version = "0.3.0", features = ["gdal"] }
 geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "e12a4982a56f6a875536a7a22f645977877bc7a6", features = [
   "gdal",
+  "geozero",
+  "parquet",
 ] }
